add service layer + exceptions + update controllers